<resources>
    <string name="app_name" translatable="false">ICP Manager</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="enter">Entrar</string>
    <string name="policy_n_privacy">Política e Privacidade</string>
    <string name="create_account">Criar Conta</string>
    <string name="email">E-mail</string>
    <string name="insert_email">Insira o email</string>
    <string name="insert_password">Insira a senha</string>
    <string name="login_failure">Falha ao fazer Login, tente novamente</string>
    <string name="error_get_data">Erro ao recuperar dados</string>
    <string name="send">Enviar</string>
    <string name="email_send_reset_password">Você receberá um e-mail com a redefinição da sua senha!</string>
    <string name="back">Voltar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Sed elit velit, rutrum blandit varius sed, elementum at diam.
        Etiam quis dignissim felis, in ornare risus.
        Nunc ut tincidunt neque. Quisque eget ligula massa.
        Curabitur efficitur vulputate nulla, nec dictum turpis malesuada facilisis.
        Morbi in ullamcorper libero. Interdum et malesuada fames ac ante ipsum primis in faucibus.
        Aenean dignissim tincidunt auctor. In porta justo ut tincidunt sodales.
        Vestibulum hendrerit, elit eget rutrum pulvinar, augue sem consectetur ligula, in posuere augue nunc a sapien.
        </string>
    <string name="reset_password">Redefinir Senha</string>
    <string name="full_name">Nome Completo</string>
    <string name="i_am">Eu sou</string>
    <string name="insert_name">Insira o nome completo</string>
    <string name="student">Estudante</string>
    <string name="professor">Professor</string>
    <string name="error">Ocorreu algum erro inesperado.</string>
    <string name="sucessful_account_creation">Conta criada com sucesso!</string>
    <string name="feed">Feed</string>
    <string name="search">Procurar</string>
    <string name="projects">Projetos</string>
    <string name="notifications">Notificações</string>
    <string name="configurations">Configurações</string>
    <string name="filter">Filtrar</string>
    <string name="universities">Universidades</string>
    <string name="professors">Professores</string>
    <string name="students">Estudantes</string>
    <string name="null_info">Nulo</string>
    <string name="profile">Perfil</string>
    <string name="dark_mode">Modo Escuro</string>
    <string name="about">Sobre</string>
    <string name="exit">Sair</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="coordinator">Coordenador</string>
    <string name="university">Universidade</string>
    <string name="gender">Gênero</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="no_info">Não informado</string>
    <string name="edit">Editar</string>
    <string name="project">Projeto</string>
    <string name="in_progress">Em andamento</string>
    <string name="finished">Finalizados</string>
    <string name="error_load_projects">Erro ao carregar projetos</string>
    <string name="create_project">Criar Projeto</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="confirm">Confirmar</string>
    <string-array name="array_spinner">
        <item>Estudante</item>
        <item>Professor</item>
    </string-array>
    <string-array name="gender_spinner">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Prefiro não Informar</item>
    </string-array>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Feminino</string>
    <string name="gender_none">Prefiro não Informar</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="save">Salvar</string>
    <string name="confirm_profile_save">Tem certeza que deseja salvar as informações do perfil?</string>
    <string name="cancel">Cancelar</string>
    <string name="opcional">Opcional</string>
    <string name="upload_photo_fail">Falha ao salvar foto</string>
    <string name="degree">Degree</string>
    <string name="bio">Biografia</string>
    <string name="error_select_university">Erro ao selecionar universidades</string>
    <string name="fill_all_fields">Preencha todos os campos para prosseguir</string>
    <string name="confirm_project_creation">Deseja realmente criar o projeto? Podem ter itens que gostaria de revisar primeiro!</string>
    <string name="delete">Excluir</string>
    <string name="confirm_phase_delete">Tem certeza que deseja excluir esta fase?</string>
    <string name="new_phase">Nova Fase</string>
    <string name="phases">Fases</string>
    <string name="title">Título</string>
    <string name="desc">Descrição</string>
    <string name="end_date">Data de Término</string>
    <string name="options">Opções</string>
    <string name="start_date">Data de Início</string>
    <string name="preparing_for_project">Preparando tudo para o projeto…</string>
    <string name="default_notification_channel_id"></string>
    <string name="FIREBASE_MESSAGING_AUTH">610913910052</string>
    <string name="FIREBASE_MESSAGING">FCM</string>
    <string name="accept">Aceitar</string>
    <string name="refuse">Recusar</string>
    <string name="NOTIFICATION_URL">https://fcm.googleapis.com/fcm/send</string>
    <string name="NOTIFICATION_SERVER_KEY">key=AAAAjj1OfSQ:APA91bGoXDqCp9n6EdebppboLSjg54MGO-lkxiY-vRi4CVZ7b4pSM7jrAou2QmKUuEzFJrNn3br7khhk0Rx8Povt1Th3VIV47V9U4asQWNkoRMslz_hXVb1SeCdms0qruvGuQ0XVK56h</string>
    <string name="TOPIC_USER_APP">/topics/user_app</string>
    <string name="TOPIC_COORDINATOR_APP">/topics/coordinator</string>
    <string name="invite_user_project">Você foi convidado(a) a participar do Projeto </string>
    <string name="new_project">Novo Projeto</string>
    <string name="error_load_notifications">Falha ao carregar notificações</string>
    <string name="failure_open_facebook">Falha ao abrir Facebook</string>
    <string name="failure_open_skype">Falha ao abrir Skype</string>
    <string name="pending_project">Projeto Pendente</string>
</resources>
